--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ title: Marin Vila
 tagline: Random Words
 ---
 <div class="intro page-header">
-From the times of the late last year(, or the one before)*n I have been searching for a good way to flat map the sequence of options life was sent with from an unknown sender, called The Sender.
-The Sender is still awaiting response.
-It will have to hold on for quite a while longer.
+  Public Notebook.
 </div>
 
 <h3>Posts</h3>
