--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ tagline: Random Words
 </div>
 
 <div class="row">
-  {% for post in paginator.posts %}
+  {% for post in site.posts %}
     <div class="col-sm-4">
       <a class="posttitle" href="{{ post.url }}"><h4>{{ post.title }}</h4>
       <div>{{ post.excerpt }}</div>
@@ -18,28 +18,13 @@ tagline: Random Words
   {% endfor %}
 </div>
 
-{% if paginator.total_pages > 1 %}
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
-  {% else %}
-    <span>&laquo; Prev</span>
-  {% endif %}
+<div class="row">
+  {% for post in site.links.posts %}
+  <div class="col-sm-4">
+    <a class="posttitle" href="{{ post.url }}"><h4>{{ post.title }}</h4>
+      <div>{{ post.excerpt }}</div>
+    </a>
 
-  {% for page in (1..paginator.total_pages) %}
-    {% if page == paginator.page %}
-      <em>{{ page }}</em>
-    {% elsif page == 1 %}
-      <a href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
-    {% else %}
-      <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
-    {% endif %}
+  </div>
   {% endfor %}
-
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
-  {% else %}
-    <span>Next &raquo;</span>
-  {% endif %}
 </div>
-{% endif %}
