--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@ tagline: Random Words
   <h3>Public Notebook</h3>
 </div>
 
+{% assign third = site.posts.size | divided_by: 4 | plus: 1 %}
 <div class="row">
   {% for post in site.posts %}
-    <div class="col-sm-4">
-      <a class="posttitle" href="{{ post.url }}"><h4>{{ post.title }}</h4>
-      <div>{{ post.excerpt }}</div>
-      </a>
-
-    </div>
+    {% assign currinloop = forloop.index | minus: 1 | modulo: third %}
+    {% assign curroutloop = forloop.index | modulo: third %}
+    {% if currinloop == 0 %}
+      <div class="col-sm-3">
+    {% endif %}
+            <a href="{{ post.url }}">
+              <div class="posttitle">
+                <h4>{{ post.title }}</h4>
+                <div>{{ post.excerpt }}</div>
+              </div>
+            </a>
+    {% if forloop.last or curroutloop == 0 %}
+          </div>
+    {% endif %}
   {% endfor %}
 </div>
 
