--- a/index.html
+++ b/index.html
@@ -7,33 +7,18 @@ tagline: Random Words
   <h3>Public Notebook</h3>
 </div>
 
-{% assign third = site.posts.size | divided_by: 3 | plus: 1 %}
 <div class="row">
+  <div class="col-sm-1"></div>
+  <div class="col-sm-10">
   {% for post in site.posts %}
-    {% assign currinloop = forloop.index | minus: 1 | modulo: third %}
-    {% assign curroutloop = forloop.index | modulo: third %}
-    {% if currinloop == 0 %}
-      <div class="col-sm-4">
-    {% endif %}
-            <a href="{{ post.url }}">
-              <div class="posttitle">
-                <h4>{{ post.title }}</h4>
-                <div>{{ post.excerpt }}</div>
-              </div>
-            </a>
-    {% if forloop.last or curroutloop == 0 %}
-          </div>
-    {% endif %}
-  {% endfor %}
-</div>
 
-<div class="row">
-  {% for post in site.links.posts %}
-  <div class="col-sm-4">
-    <a class="posttitle" href="{{ post.url }}"><h4>{{ post.title }}</h4>
-      <div>{{ post.excerpt }}</div>
+    <a href="{{ post.url }}">
+      <div class="posttitle">
+        <h4>{{ post.title }}</h4>
+        <div>{{ post.excerpt }}</div>
+      </div>
     </a>
-
-  </div>
   {% endfor %}
+  </div>
+  <div class="col-sm-2"></div>
 </div>
